@@ -380,8 +380,6 @@ Where `${project.version}` is the version to be used:
 
         var options = ParallelConsumerOptions.<String, String>builder()
                 .ordering(KEY) // <2>
-                .maxMessagesToQueue(1000) // <3>
-                .softMaxNumberMessagesBeyondBaseCommitOffset(1000) // <4>
                 .consumer(kafkaConsumer)
                 .producer(kafkaProducer)
                 .build();
