@@ -328,7 +328,7 @@
             <dependency>
                 <groupId>org.awaitility</groupId>
                 <artifactId>awaitility</artifactId>
-                <version>4.0.4-SNAPSHOT</version>
+                <version>4.0.3</version>
                 <scope>test</scope>
             </dependency>
             <dependency>
